--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ header{
 
 /* main */
 #hero{
-    background-image: url(https://github.com/uillu2416/balaikubo/maingate2.jpg);
+    background-image: url(https://uillu2416.github.io/balaikubo/maingate2.jpg);
     background-position: center;
     background-size: cover;
     height: 430px;
@@ -104,7 +104,7 @@ header{
     
 }
 .photo{
-    background-image: url(https://github.com/uillu2416/balaikubo/pool9.jpg);
+    background-image: url(https://uillu2416.github.io/balaikubo/pool9.jpg);
     background-position: center;
     background-size: cover;
     height: 300px;
@@ -142,7 +142,7 @@ iframe{
     position: center;
 }
 .photo2{
-    background-image: url(https://github.com/uillu2416/balaikubo/pool3.jpg);
+    background-image: url(https://uillu2416.github.io/balaikubo/pool3.jpg);
     background-position: center;
     background-size: cover;
     height: 300px;
@@ -161,7 +161,7 @@ iframe{
     margin: 3%;
 }
 .photo3{
-    background-image: url(https://github.com/uillu2416/balaikubo/pool8.jpg);
+    background-image: url(https://uillu2416.github.io/balaikubo/pool8.jpg);
     background-position: center;
     background-size: cover;
     height: 300px;
@@ -170,7 +170,7 @@ iframe{
     display: flex;
 }
 .photo4{
-    background-image: url(https://github.com/uillu2416/balaikubo/cottage3.jpg);
+    background-image: url(https://uillu2416.github.io/balaikubo/cottage3.jpg);
     background-position: center;
     background-size: cover;
     height: 300px;
