--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header{
     font-weight: 600;
     letter-spacing: -0.04em;
     text-decoration: none;
+    color:black;
 }
 .pop{font-family: "Mochiy Pop P One", sans-serif;}
 
