--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header{
 }
 .header_menu li a{
     transition: .3s;
-    text-decoration: non;
+    text-decoration: none;
     color:#000000;
 }
 
