--- a/style.css
+++ b/style.css
@@ -15,6 +15,17 @@ html {
     margin: 0 auto;
     position: relative;
 }
+@media(max-width:768px){
+    .container{
+        max-width: 90%;
+    }
+}
+@media(max-width:480px){
+    .container{
+        max-width: 100%;
+        padding: 0 10px;
+    }
+}
 .flex{
     display:flex;
     justify-content: space-between;
