--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ html {
     position: relative;
 }
 @media(max-width:768px){
-    .container{
+    main{
         max-width: 90%;
     }
 }
 @media(max-width:480px){
-    .container{
+    main{
         max-width: 100%;
         padding: 0 10px;
     }
